@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020181204"
-#define public MagickPackageReleaseDate "snapshot-20181204"
+#define public MagickPackageVersionAddendum ".020181205"
+#define public MagickPackageReleaseDate "snapshot-20181205"
